Actions
Bug #1494
closedrtls never sets rtlsp->ifname
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
kernel
Start date:
2011-09-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
It could be insomnia talking, but I'd swear that rtls never sets rtlsp->ifname, though it does use it in numerous diagnostic messages.
Updated by Ilya Yanok over 10 years ago
It seems to me that rtlsp->ifname is not needed at all. We should probably use mac_name(rtlsp->mh) instead. I've posted the patch to the ML.
Updated by Rich Lowe over 10 years ago
- Status changed from New to Resolved
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in r13607 commit:bbb551159b47
Actions