1494 rtls never sets rtlsp->ifname Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Yakov Zaytsev <yakov.zaytsev@nexenta.com> Approved by: Richard Lowe <richlowe@richlowe.net>